--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -26,7 +26,7 @@
     <string name="shortcut_pinning_not_supported">Accesos directos no disponibles en tu dispositivo</string>
     <string name="create_button">Crear</string>
     <string name="create_shortcut">Crear acceso directo</string>
-    <string name="edit_button">Editar</string>
+    <string name="edit">Editar</string>
     <string name="color">Color</string>
     <string name="alias">Alias</string>
     <string name="create_reminder">Crear notificación</string>
@@ -46,7 +46,7 @@
     <string name="delete">Borrar</string>
     <string name="delete_favorite_message">¿Estas seguro de que quieres borrar este favorito? Esta operación no se puede deshacer.</string>
     <string name="delete_favorite_title">Borrar favorito</string>
-    <string name="line">Línea</string>
+    <string name="line_template">Línea %1$s</string>
     <string name="bus_chip">BUS</string>
     <string name="tram_chip">TRANVÍA</string>
     <string name="notification_error">Error cargando información.</string>
@@ -132,4 +132,8 @@
     <string name="stop_type_tram">Tipo de parada tranvía</string>
     <string name="stop_favorited">Parada favorita</string>
     <string name="stop_not_favorited">Parada no favorita</string>
+    <string name="lines">Líneas</string>
+    <string name="number_template">Número %1$s</string>
+    <string name="rearrange">Reordenar</string>
+    <string name="search">Buscar</string>
 </resources>
