--- a/material-intro-screen/src/main/res/values/strings.xml
+++ b/material-intro-screen/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="mis_grant_permissions">Grant permission</string>
-    <string name="mis_please_grant_permissions">Please grant needed permissions</string>
-    <string name="mis_impassable_slide">Can\'t pass this slide.</string>
+    <string name="mis_grant_permissions" translatable="true">Grant permission</string>
+    <string name="mis_please_grant_permissions" translatable="true">Please grant needed permissions</string>
+    <string name="mis_impassable_slide" translatable="true">Can\'t pass this slide.</string>
+    <string name="mis_next_slide" translatable="true">Next slide</string>
+    <string name="mis_previous_slide" translatable="true">Previous slide</string>
+    <string name="mis_skip_intro" translatable="true">Skip introduction</string>
 </resources>
