Added rural trackings to map marker clustering system. Added rural filter chip to map. Modified clustering algorithm and renderer to hide markers depending on the filter instead of adding/removing to the cluster manager. Modified clustering algorithm to remove multiple items more efficiently. Improved map marker clearing logic.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -145,4 +145,7 @@
     <string name="map_type_satellite_description">habilitar vista de satélite</string>
     <string name="map_type_description">tipo de vista de mapa</string>
     <string name="time_template">hora %1$s</string>
+    <string name="rural_chip">RURAL</string>
+    <string name="rural_chip_description">filtro paradas bus rural</string>
+    <string name="stop_type_rural">Tipo de parada rural</string>
 </resources>
