Added rural trackings selector for the map to quickly find and zoom into specific rural trackings. Improved filter chips state readability. Introduced some changes to clustering system to fix rendering bug when swapping filters too quickly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,9 @@
     <string name="map_type_description" translatable="true">map view type</string>
     <string name="map_type_satellite_description" translatable="true">enable satellite view</string>
     <string name="map_type_normal_description" translatable="true">enable map view</string>
+    <string name="vehicle_template" translatable="true">Vehicle %1$s</string>
+    <string name="no_trackings_available" translatable="true">Couldn\'t find any rural trackings, try again later!</string>
+    <string name="rural_trackings_available" translatable="true">Rural bus trackings available</string>
 
     <!--Search-->
     <string name="search_view_hint" translatable="true">Name, destination or number…</string>
