Fixed bug related to quickly switching filters and cluster rendering, cause was intrinsic to rendering task scheduling of defaultClusterRenderer so now rendering tasks caused by changes to filter state are no longer animated.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -151,5 +151,5 @@
     <string name="rural_tracking">Rastreo de bus rural</string>
     <string name="vehicle_template">Vehículo %1$s</string>
     <string name="no_trackings_available">No hay rastreos rurales disponibles, ¡prueba en un rato!</string>
-    <string name="rural_trackings_available">Rastreos de bus rural disponibles</string>
+    <string name="rural_trackings">Rastreos de bus rural:</string>
 </resources>
