--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,10 +126,13 @@
     <!--Preferences-->
     <string name="saved_bus_stops_version_number_key" translatable="false">SAVED_BUS_STOPS_VERSION_NUMBER_KEY</string>
     <string name="saved_tram_stops_version_number_key" translatable="false">SAVED_TRAM_STOPS_VERSION_NUMBER_KEY</string>
+    <string name="saved_rural_stops_version_number_key" translatable="false">SAVED_RURAL_STOPS_VERSION_NUMBER_KEY</string>
     <string name="saved_bus_lines_version_number_key" translatable="false">SAVED_BUS_LINES_VERSION_NUMBER_KEY</string>
     <string name="saved_tram_lines_version_number_key" translatable="false">SAVED_TRAM_LINES_VERSION_NUMBER_KEY</string>
+    <string name="saved_rural_lines_version_number_key" translatable="false">SAVED_RURAL_LINES_VERSION_NUMBER_KEY</string>
     <string name="saved_bus_lines_locations_version_number_key" translatable="false">SAVED_BUS_LINES_LOCATIONS_VERSION_NUMBER_KEY</string>
     <string name="saved_tram_lines_locations_version_number_key" translatable="false">SAVED_TRAM_LINES_LOCATIONS_VERSION_NUMBER_KEY</string>
+    <string name="saved_rural_lines_locations_version_number_key" translatable="false">SAVED_RURAL_LINES_LOCATIONS_VERSION_NUMBER_KEY</string>
     <string name="saved_changelog_version_number_key" translatable="false">SAVED_CHANGELOG_VERSION_NUMBER_KEY</string>
     <string name="saved_changelog_en_key" translatable="false">SAVED_CHANGELOG_EN_KEY</string>
     <string name="saved_changelog_es_key" translatable="false">SAVED_CHANGELOG_ES_KEY</string>
@@ -180,12 +183,15 @@
     <!--Parse-->
     <string name="parse_application_id" translatable="false">transporte-zaragoza</string>
     <string name="parse_server" translatable="false">https://transporte-zaragoza.herokuapp.com/parse/</string>
-    <string name="parse_bus_stops_collection" translatable="false">bus_stops</string>
-    <string name="parse_tram_stops_collection" translatable="false">tram_stops</string>
-    <string name="parse_bus_lines_collection" translatable="false">bus_lines</string>
-    <string name="parse_tram_lines_collection" translatable="false">tram_lines</string>
-    <string name="parse_bus_lines_locations_collection" translatable="false">bus_lines_locations</string>
-    <string name="parse_tram_lines_locations_collection" translatable="false">tram_lines_locations</string>
+    <string name="parse_bus_stops_collection" translatable="false">v2_bus_stops</string>
+    <string name="parse_tram_stops_collection" translatable="false">v2_tram_stops</string>
+    <string name="parse_rural_stops_collection" translatable="false">v2_rural_stops</string>
+    <string name="parse_bus_lines_collection" translatable="false">v2_bus_lines</string>
+    <string name="parse_tram_lines_collection" translatable="false">v2_tram_lines</string>
+    <string name="parse_rural_lines_collection" translatable="false">v2_rural_lines</string>
+    <string name="parse_bus_lines_locations_collection" translatable="false">v2_bus_lines_locations</string>
+    <string name="parse_tram_lines_locations_collection" translatable="false">v2_tram_lines_locations</string>
+    <string name="parse_rural_lines_locations_collection" translatable="false">v2_rural_lines_locations</string>
     <string name="parse_changelog_collection" translatable="false">changelog</string>
     <string name="update_data_work_name" translatable="false">UPDATE_DATA_WORK_NAME</string>
 
