--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -157,4 +157,5 @@
     <string name="map_animations_title">Animaciones de mapa</string>
     <string name="dark_map_summary">Un mapa oscuro a juego con tu tema favorito</string>
     <string name="map_animations_summary">Deshabilita las animaciones del mapa si tu teléfono se ralentiza al hacer zoom</string>
+    <string name="line_not_found">Línea no reconocida, ¡Estoy trabajando en ello!</string>
 </resources>
