--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,9 +67,10 @@
     <string name="lines" translatable="true">Lines</string>
     <string name="schedule_menu_item" translatable="true">Schedule</string>
     <string name="tram_line_schedule_url" translatable="false">https://www.tranviasdezaragoza.es/es/informacion/horaires</string>
-    <string name="bus_line_schedule_url" translatable="false">http://zaragoza.avanzagrupo.com/frm_esquemaparadas.php?tipoPag=Linea&amp;LINEASEL=%</string>
+    <string name="bus_line_schedule_url" translatable="false">http://zaragoza.avanzagrupo.com/frm_esquemaparadas.php?tipoPag=Linea&amp;LINEASEL=%1$s</string>
     <string name="tram_line_schedule_title" translatable="true">Tram line schedule</string>
     <string name="bus_line_schedule_title" translatable="true">Bus line %1$s schedule</string>
+    <string name="rural_line_schedule_title" translatable="true">Rural line %1$s schedule</string>
     <string name="line_not_found" translatable="true">Unrecognized line, I\'m working on it!</string>
     <string name="tram_line_schedule_javascript" translatable="false">javascript:(function(){$(\'#menu_responsive\').hide();$(\'#wrraperContainerMenu\').hide();$(\'.entry-content.clearfix\').appendTo(\'body\');})()</string>
     <string name="bus_line_schedule_javascript" translatable="false">javascript:(function(){document.querySelector(\'#cabecera\').style.display = \'none\';document.querySelector(\'#pie\').style.display = \'none\';document.querySelector(\'#contenido > div.hgroup\').style.display = \'none\';document.querySelector(\'#paradas > div.select\').style.display = \'none\';document.querySelector(\'#linea\').style.display = \'none\';})()</string>
